# KR4

./: README.md  pyproject.toml
src/: fileworker.py  function.py  hh_api.py  main.py  vacanci.py
tests/: test_Fileworker.py  test_function.py  test_hh_api.py  test_vacanci.py
