[tool.poetry]
name = "kr4"
version = "0.1.0"
description = ""
authors = ["Tatyana Khorobrykh <pushistik607@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
